<resources>
    <string name="app_name">Test IT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_welcome">Добре дошъл в</string>
    <string name="text_description">Теставай знанията си по Информатика с няколко клика!</string>
    <string name="eight_class">8 клас</string>
    <string name="ninth_class">9 клас</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_text_1">Добре дошъл в Test IT.</string>
    <string name="initial_text_2">Тествай знанията си \n по Информатика за 8 клас.</string>
    <string name="initial_text_3">Предизвикай себе си.</string>
    <string name="initial_text_4">Проследи напредъка си.</string>
    <string name="continue_to_the_next_screen">Продължи</string>
    <string name="choose_question">Избери броя въпроси</string>
    <string name="start_test">Започни тест</string>
    <string name="set_timer">Настрой таймер</string>
    <string name="twenty">20</string>
    <string name="fifteen">15</string>
    <string name="ten">10</string>
    <string name="content">Съдържание</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="are_you_submit">Сигурен ли си,че искаш да предадеш?</string>
    <string name="check">Провери</string>
    <string name="exit">Излез</string>
    <string name="average">Среден\u0020</string>
    <string name="well">Добър\u0020</string>
    <string name="well_done">Много добър\u0020</string>
    <string name="exellent">Отличен\u0020</string>
    <string name="low">Слаб\u0020</string>
    <string name="test_result">Резултат от теста.</string>
    <string name="score">%s/%s</string>
    <string name="txt_points">Точки</string>
    <string name="there_is_no_result">Няма предишен резултат</string>
    <string name="the_best_result">Най-добър резултат: %s"</string>
    <string name="module_1_name">Основи на информатиката.</string>
    <string name="module_2_name">Среда за визуално програмиране.</string>
    <string name="module_3_name">Основни типове данни. Аритметични операции. Вградени функции.</string>
    <string name="module_4_name">Програмни конструкции за реализиране на разклонен алгоротъм.</string>
    <string name="module_5_name">Програмни конструкции за реализиране на циклични алгоротми.</string>
    <string name="module_6_name">Съставни типове данни. Едномерен масив.</string>

</resources>