<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="@dimen/no_dimen"
            android:layout_height="@dimen/no_dimen"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toTopOf="@id/txtChooseQuestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent " />

        <TextView
            android:id="@+id/txtChooseQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/choose_question"
            android:textColor="@color/dark_orange"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgSettings" />

        <TextView
            android:id="@+id/txtTake10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/background_selected_numbers"
            android:fontFamily="@font/dm_sans_regular"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="10dp"
            android:text="@string/ten"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/txtTake15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChooseQuestions" />

        <TextView
            android:id="@+id/txtTake15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/background_unselected_numbers"
            android:fontFamily="@font/dm_sans_regular"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="10dp"
            android:text="@string/fifteen"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/txtTake20"
            app:layout_constraintStart_toEndOf="@id/txtTake10"
            app:layout_constraintTop_toBottomOf="@id/txtChooseQuestions" />

        <TextView
            android:id="@+id/txtTake20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/background_unselected_numbers"
            android:fontFamily="@font/dm_sans_regular"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="10dp"
            android:text="@string/twenty"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtTake15"
            app:layout_constraintTop_toBottomOf="@id/txtChooseQuestions" />

        <TextView
            android:id="@+id/txtChooseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/set_timer"
            android:textColor="@color/dark_orange"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTake10" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/DefaultNumberPickerTheme"
            android:timePickerMode="spinner"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChooseTime" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/no_dimen"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="@color/dark_purple"
            android:paddingVertical="10dp"
            android:text="@string/start_test"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberPicker"
            app:layout_constraintWidth_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>